Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#135 closed bug (fixed)

Workspaces don't let you to move windows

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Workspaces don't let you to move windows inside current workspace nor to the another one. Also wile moving windows around you could see a lot of flickering. Tested with rev16300.

Change History (7)

comment:1 by korli, 19 years ago

Workspaces work on R5, so I reassign this bug

comment:2 by korli, 19 years ago

Owner: changed from sikosis to axeld

comment:3 by korli, 19 years ago

Component: PreferencesServers

comment:4 by axeld, 19 years ago

Fixed in hrev16776.

comment:5 by axeld, 19 years ago

Status: newclosed

comment:6 by axeld, 19 years ago

Resolution: fixed

comment:7 by korli, 19 years ago

Tested ok

Note: See TracTickets for help on using tickets.